--- a/Education System/Education-System/src/main/resources/application.properties
+++ b/Education System/Education-System/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.show-sql = true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 server.port=8080
 app.version=1.0.0
+#spring.txt
+logging.file.path=E:/
+#logging.pattern.console=
