--- a/Education System/Education-System/src/main/resources/application.properties
+++ b/Education System/Education-System/src/main/resources/application.properties
@@ -11,7 +11,7 @@ app.version=1.0.0
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-logging.pattern.console=
-logging.file.path=E:/
+#logging.pattern.console=
+#logging.file.path=E:/
 
 
