--- a/Education System/Education-System/src/main/resources/application.properties
+++ b/Education System/Education-System/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/education_system_rest_api
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = postgresql
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.show-sql = true
@@ -11,7 +11,7 @@ app.version=1.0.0
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-logging.pattern.console=
-logging.file.path=E:/
+#logging.pattern.console=
+#logging.file.path=D:/
 
 
