Some changes has been made to Admin,Student,Course and feedback modules.

--- a/Education System/Education-System/src/main/resources/application.properties
+++ b/Education System/Education-System/src/main/resources/application.properties
@@ -11,8 +11,9 @@ app.version=1.0.0
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
-logging.pattern.console=
+#logging.pattern.console=
 logging.file.path=E:/
+spring.http.encoding.force-request=false
 
 
 
